[project]
name = "cube-power"
version = "0.2.0"
description = "Solar-tracking Tesla charge controller for Dabbsson power stations"
requires-python = ">=3.11"
dependencies = [
    "tinytuya>=1.16",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["cube_power"]
py-modules = ["server", "dps_map", "probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
